# Basic-programming-language

./: INSTRUCTIONS.md  README.md  project.cabal
example/: euler1.txt  euler2.txt  euler3.txt  euler5.txt  euler6.txt  euler9.txt
imperative-hints/: README.md  project.cabal
imperative-hints/example/: euler1.mylang
imperative-hints/src/: Ast.hs  Eval.hs  Exec.hs  HelpShow.hs  Parser.hs  ParserMonad.hs  StateErrorMonad.hs
imperative-hints/test/: Main.hs  ParserTest.hs
src/: Ast.hs  Eval.hs  Exec.hs  Parser.hs  StateErrorMonad.hs
test/: EvalTest.hs  ExampleTest.hs  Main.hs  ParserTest.hs
